; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/mouse/extr_synaptics_i2c.c_synaptics_i2c_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/mouse/extr_synaptics_i2c.c_synaptics_i2c_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }
%struct.synaptics_i2c = type { i32 }

@polling_req = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_client*)* @synaptics_i2c_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @synaptics_i2c_remove(%struct.i2c_client* %0) #0 {
  %2 = alloca %struct.i2c_client*, align 8
  %3 = alloca %struct.synaptics_i2c*, align 8
  store %struct.i2c_client* %0, %struct.i2c_client** %2, align 8
  %4 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %5 = call %struct.synaptics_i2c* @i2c_get_clientdata(%struct.i2c_client* %4)
  store %struct.synaptics_i2c* %5, %struct.synaptics_i2c** %3, align 8
  %6 = load i32, i32* @polling_req, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %14, label %8

8:                                                ; preds = %1
  %9 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %10 = getelementptr inbounds %struct.i2c_client, %struct.i2c_client* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.synaptics_i2c*, %struct.synaptics_i2c** %3, align 8
  %13 = call i32 @free_irq(i32 %11, %struct.synaptics_i2c* %12)
  br label %14

14:                                               ; preds = %8, %1
  %15 = load %struct.synaptics_i2c*, %struct.synaptics_i2c** %3, align 8
  %16 = getelementptr inbounds %struct.synaptics_i2c, %struct.synaptics_i2c* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @input_unregister_device(i32 %17)
  %19 = load %struct.synaptics_i2c*, %struct.synaptics_i2c** %3, align 8
  %20 = call i32 @kfree(%struct.synaptics_i2c* %19)
  ret i32 0
}

declare dso_local %struct.synaptics_i2c* @i2c_get_clientdata(%struct.i2c_client*) #1

declare dso_local i32 @free_irq(i32, %struct.synaptics_i2c*) #1

declare dso_local i32 @input_unregister_device(i32) #1

declare dso_local i32 @kfree(%struct.synaptics_i2c*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
